feat: Sistema completo con ML/DL + Documentación consolidada
- README.md único (751 líneas) con toda la documentación
- Makefile con 26 comandos útiles (make dev, make start, etc)
- Scripts optimizados (inicializacion_completa.sh + limpiar_datos.sh)
- Fix LazyInitializationException en VentaResolver
- Servicios: Core (Spring Boot) + ML (FastAPI) + DL (Node.js/TensorFlow)
- Frontend modernizado con páginas ML/DL
- Docker Compose para desarrollo y producción
- .gitignore optimizado (reducción 99%: 1.7GB → 660KB)

--- a/core-service/pom.xml
+++ b/core-service/pom.xml
@@ -51,6 +51,17 @@
             <version>1.18.30</version>
             <scope>provided</scope>
         </dependency>
+        <!-- PostgreSQL Driver para Docker/Producción -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <!-- Actuator para health checks -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
