--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,209 @@
-# Compiled class files
+# ================================================
+# .gitignore - Proyecto SW2
+# Ignora dependencias reinstalables y archivos pesados
+# ================================================
+
+# ==========================================
+# JAVA / MAVEN (Core Service)
+# ==========================================
 *.class
-
-# Log files
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files
 *.jar
 *.war
 *.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
-
-# Virtual machine crash logs
 hs_err_pid*
-
-# IDE files
-.idea/
-*.iml
-.vscode/
+replay_pid*
 
 # Maven
 target/
+!.mvn/wrapper/maven-wrapper.jar
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
 release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
 
-# Node modules (si tienes frontend)
+# ==========================================
+# NODE.JS / NPM (Frontend + DL Service)
+# ==========================================
 node_modules/
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Build outputs
 dist/
+dist-ssr/
 build/
+*.local
 
-# Environment variables
-.env
+# Testing
+coverage/
 
-# Python
+# ==========================================
+# PYTHON (ML Service)
+# ==========================================
+# Virtual environments
 venv/
+env/
+ENV/
+.venv/
+.Python
+
+# Compiled Python
 __pycache__/
 *.py[cod]
-*.egg-info/
-.pytest_cache/
-htmlcov/
-.coverage
+*$py.class
+*.so
 
-# Test reports
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Testing
+.pytest_cache/
+.coverage
+.coverage.*
+htmlcov/
+.tox/
+.nox/
+.hypothesis/
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+
+# ==========================================
+# BASES DE DATOS (No subir DBs locales)
+# ==========================================
+*.db
+*.sqlite
+*.sqlite3
+*.db-journal
+*.db-wal
+*.db-shm
+ml_cache.db
+core_db.*
+
+# ==========================================
+# LOGS
+# ==========================================
+*.log
+logs/
+*.log.*
+ml-service.log
+
+# ==========================================
+# DOCKER
+# ==========================================
+# NO ignorar docker-compose.yml ni Dockerfiles
+# Solo ignorar archivos temporales de Docker
+
+# ==========================================
+# IDE / EDITORS
+# ==========================================
+.idea/
+.vscode/
+*.iml
+*.iws
+*.ipr
+*.swp
+*.swo
+*~
+.DS_Store
+Thumbs.db
+
+# ==========================================
+# ENVIRONMENT VARIABLES
+# ==========================================
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# ==========================================
+# MODELOS ML/DL (Opcional - evaluar si subir)
+# ==========================================
+# Si los modelos son grandes (>100MB), ignorarlos:
+# *.pkl
+# *.h5
+# *.hdf5
+# *.pb
+# *.pth
+# *.ckpt
+# *.onnx
+
+# Si son pequeños (<100MB) o críticos, dejarlos
+# ml-service/app/models/*.pkl
+# dl-service/models/*.json
+
+# ==========================================
+# UPLOADS / TEMPORAL
+# ==========================================
+uploads/*
+!uploads/.gitkeep
+temp/
+tmp/
+*.tmp
+
+# ==========================================
+# TEST REPORTS
+# ==========================================
 report.html
 *.xml
+test-results/
+junit/
+
+# ==========================================
+# BACKUPS
+# ==========================================
+*.bak
+*.backup
+*.old
+backups/
+
+# ==========================================
+# COMPILADOS / TRANSPILADOS
+# ==========================================
+*.tsbuildinfo
+.cache/
+
+# ==========================================
+# OS
+# ==========================================
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# ==========================================
+# CARPETAS DE DATOS (si existen)
+# ==========================================
+data/
+!data/.gitkeep
