--- a/core-service/src/main/resources/application.properties
+++ b/core-service/src/main/resources/application.properties
@@ -63,3 +63,31 @@ logging.level.root=INFO
 logging.level.com.proyecto=DEBUG
 logging.level.org.hibernate.SQL=${SQL_LOG_LEVEL:WARN}
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+
+# Stripe
+stripe.secret-key=${STRIPE_SECRET_KEY:}
+stripe.webhook-secret=${STRIPE_WEBHOOK_SECRET:}
+
+# Payments
+app.payment.success-url=${APP_SUCCESS_URL:http://localhost:5173/pago-exitoso}
+app.payment.cancel-url=${APP_CANCEL_URL:http://localhost:5173/pago-cancelado}
+app.payment.currency=${CURRENCY:USD}
+
+
+management.endpoints.web.exposure.include=health,info,configprops
+
+# ============================================
+# JWT
+# ============================================
+jwt.secret=${JWT_SECRET:change-this-super-secret-key-in-production-minimum-256-bits}
+jwt.expiration=${JWT_EXPIRATION:86400000}
+
+# ============================================
+# DELIVERY
+# ============================================
+delivery.origin-lat=${DELIVERY_ORIGIN_LAT:-17.7833}
+delivery.origin-lng=${DELIVERY_ORIGIN_LNG:-63.1821}
+delivery.base-fee=${DELIVERY_BASE_FEE:2.0}
+delivery.per-km=${DELIVERY_PER_KM:0.5}
+delivery.mode=${DELIVERY_MODE:driving}
