Fix: Remover archivos Zone.Identifier de Windows y agregar a .gitignore
- Remover docker-compose.prod.yml:Zone.Identifier y docker-compose.yml:Zone.Identifier
- Agregar patrón *:Zone.Identifier a .gitignore para evitar problemas futuros
- Estos archivos son Alternate Data Streams de Windows que no son válidos en Linux/Mac
- Soluciona error de descarga en otros sistemas operativos

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,13 @@
 # ================================================
 
 # ==========================================
+# Windows / OS files (Alternate Data Streams)
+# ==========================================
+*:Zone.Identifier
+.DS_Store
+Thumbs.db
+
+# ==========================================
 # JAVA / MAVEN (Core Service)
 # ==========================================
 *.class
